# mide

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/agents/: coding-style.md
docs/: contributing.md  live_frontend_plan.md
src/: main.cpp
src/app/: application.cpp  application.h  editor_shell.cpp  editor_shell.h  theme.cpp  theme.h
src/compiler/document/: document_snapshot.cpp  document_snapshot.h  editor_document_state.cpp  editor_document_state.h  line_index.cpp  line_index.h  text_change.cpp  text_change.h
src/compiler/semantic/: semantic_model.cpp  semantic_model.h
src/compiler/syntax/: lexer.cpp  lexer.h  parser.cpp  parser.h  source_span.h  syntax_diagnostic.h  syntax_identity.h  syntax_kind.h  syntax_node.h  syntax_support.cpp  syntax_token.h  syntax_tree.cpp  syntax_tree.h
src/panels/: assembly_panel.cpp  assembly_panel.h  console_panel.cpp  console_panel.h  dummy_panels.cpp  dummy_panels.h  editor_panel.cpp  editor_panel.h  explorer_panel.cpp  explorer_panel.h  memory_panel.cpp  memory_panel.h  outline_panel.cpp  outline_panel.h  panel_common.cpp  panel_common.h  panels.h  watch_panel.cpp  watch_panel.h
tests/: frontend_smoke.cpp
